--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -72,8 +72,8 @@
           <button type="button" data-testid="freeze-top-row">Freeze Top Row</button>
           <button type="button" data-testid="freeze-first-column">Freeze First Column</button>
           <button type="button" data-testid="unfreeze-panes">Unfreeze Panes</button>
-          <button type="button" data-testid="open-ai-panel">AI panel</button>
-          <button type="button" data-testid="open-ai-audit-panel">Audit log</button>
+          <button type="button" data-testid="open-panel-ai-chat">AI panel</button>
+          <button type="button" data-testid="open-panel-ai-audit">Audit log</button>
           <button type="button" data-testid="open-data-queries-panel">Queries</button>
           <button type="button" data-testid="open-macros-panel">Macros</button>
           <button type="button" data-testid="open-script-editor-panel">Scripts</button>
