refactor(desktop): rely on ui.css for sheet tab styling

--- a/apps/desktop/index.html
+++ b/apps/desktop/index.html
@@ -27,7 +27,7 @@
           ></div>
         </div>
       </div>
-      <div id="sheet-tabs" class="sheet-tabs" data-testid="sheet-tabs"></div>
+      <div id="sheet-tabs" class="sheet-bar" data-testid="sheet-tabs"></div>
       <div class="statusbar">
         <div class="statusbar__main">
           <div class="statusbar-mode" data-testid="status-mode">Ready</div>
